@@ -50,7 +50,6 @@ import io.micronaut.inject.visitor.VisitorContext;
 
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -82,7 +81,7 @@ public class ConfigurationMetadataWriterVisitor implements TypeElementVisitor<Co
 
     @Override
     public Set<String> getSupportedAnnotationNames() {
-        return Collections.singleton("io.micronaut.context.annotation.*");
+        return Set.of(ConfigurationProperties.class.getName(), EachProperty.class.getName(), ConfigurationReader.class.getName(), "io.micronaut.management.endpoint.annotation.Endpoint");
     }
 
     @Override
